--- a/store/templates/store/delete_view.html
+++ b/store/templates/store/delete_view.html
@@ -4,24 +4,46 @@
 {% block view_content %}
     <div class="container-fluid">
         <p class="p-3 m-4 text-primary"><strong>
-            Confirm deletion of <em><strong> ' {{ detail_object }} ' </strong></em> link? <br>All related items will
+            Confirm deletion of <em><strong> ' {{ detail_object }} ' </strong></em> {{ model_name | lower }}? <br>All
+            related items will
             be deleted.
         </strong>
         </p>
         <div class="d-flex p-2 m-4">
-            <form method="post" action="{% url 'store:link-delete' pk=detail_object.pk %}">
+            <form method="post"
+                    {% if 'links' in request.path %}
+                  action="{% url 'store:link-delete' pk=detail_object.pk %}"
+                    {% elif 'topics' in request.path %}
+                  action="{% url 'store:topic-delete' pk=detail_object.pk %}"
+                    {% elif 'tags' in request.path %}
+                  action="{% url 'store:tag-delete' pk=detail_object.pk %}"
+                    {% endif %}
+            >
                 {% csrf_token %}
                 {{ form }}
-                <a href="{% url 'store:link-delete' pk=detail_object.pk %}">
-                    <button type="submit" value='Confirm' class="btn btn-primary btn-sm btn-danger m-1">
-                        Yes, delete
-                    </button>
+                {% if 'links' in request.path %}
+                    <a href="{% url 'store:link-delete' pk=detail_object.pk %}">
+                {% elif 'topics' in request.path %}
+                    <a href="{% url 'store:topic-delete' pk=detail_object.pk %}">
+                {% elif 'tags' in request.path %}
+                    <a href="{% url 'store:tag-delete' pk=detail_object.pk %}">
+                {% endif %}
+                <button type="submit" value='Confirm' class="btn btn-primary btn-sm btn-danger m-1">
+                    Yes, delete
+                </button>
                 </a>
             </form>
-            <a href="{% url 'store:link-update' pk=detail_object.pk %}">
-                <button type="submit" class="btn btn-primary btn-sm m-1">
-                    No, return back
-                </button>
+
+            {% if 'links' in request.path %}
+                <a href="{% url 'store:link-update' pk=detail_object.pk %}">
+            {% elif 'topics' in request.path %}
+                <a href="{% url 'store:topic-update' pk=detail_object.pk %}">
+            {% elif 'tags' in request.path %}
+                <a href="{% url 'store:tag-update' pk=detail_object.pk %}">
+            {% endif %}
+            <button type="submit" class="btn btn-primary btn-sm m-1">
+                No, return back
+            </button>
             </a>
         </div>
 
