--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -22,10 +22,10 @@
         <tr>
             <th scope="row">{{ forloop.counter }}</th>
             <td>
-                <a href="{{ link.url }}" target="_blank">
+                <a href="{{ link.url }}" target="_blank" onclick="readCount({{ link.pk }})">
                     {{ link.title | lower }}
                 </a>
-                <a href="{{ link.id }}/" target="_blank" onclick="readCount({{ link.pk }})">
+                <a href="{{ link.id }}/" target="_blank">
                     <img src="{% static 'store/img/edit_icon.svg' %}" alt="edit-link"/>
                 </a>
 
