major issue fix for link detail view, update added to path for update, url tag used in templates

--- a/store/templates/store/tag_list.html
+++ b/store/templates/store/tag_list.html
@@ -14,7 +14,7 @@
         <tr>
             <th scope="row">{{ forloop.counter }}</th>
             <td>{{ tag.name | lower }}
-                            <a href="{{ tag.id }}/" target="_blank">
+                            <a href="{% url 'store:tag-update' tag.pk %}" target="_blank">
                     <img src="{% static 'store/img/edit_icon.svg' %}" alt="edit-link"/>
                 </a></td>
             <td>{{ tag.updated_on|date:"d-m-y" }}</td>
