--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -2,7 +2,8 @@
 {% load static %}
 {% block content_list %}
     {% csrf_token %}
-    <script src="{% static 'store/js/checkbox.js' %}"></script>
+    <script src="{% static 'store/js/utilFunctions.js' %}">
+    </script>
     <thead class="h6">
     <tr>
         <th scope="col"><h5>#</h5></th>
@@ -24,7 +25,7 @@
                 <a href="{{ link.url }}" target="_blank">
                     {{ link.title | lower }}
                 </a>
-                <a href="{{ link.id }}/" target="_blank">
+                <a href="{% url 'store:link-update' link.pk %}" target="_blank">
                     <img src="{% static 'store/img/edit_icon.svg' %}" alt="edit-link"/>
                 </a>
 
