--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -22,7 +22,7 @@
             <th scope="row">{{ forloop.counter }}</th>
             <td>
                 <a href="{{ link.url }}" target="_blank" onclick="readCount({{ link.pk }})">
-                    {{ link.title | lower }}
+                    {{ link.title | lower | slice:":30" }}
                 </a>
                 <a href="{% url 'store:link-update' link.pk %}" target="_blank">
                     <img src="{% static 'store/img/edit_icon.svg' %}" alt="edit-link"/>
