changed func name for user stat context obj

--- a/store/templates/store/stats.html
+++ b/store/templates/store/stats.html
@@ -1,7 +1,7 @@
-{% extends 'store/base_list.html' %}
+{% extends 'store/base_view.html' %}
 {% load static %}
 
-{% block content_list %}
-    <h1>Stats</h1>
+{% block view_content %}
+    <h1>hello</h1>
 {% endblock %}
 
