stats refactored DRY, services context method removed, moved to views - IMP

--- a/store/templates/store/stats.html
+++ b/store/templates/store/stats.html
@@ -8,39 +8,13 @@
         </h3>
         <table class="table table-hover">
             <tbody>
+            {% for k, v in stats_data.items %}
             <tr class="table-info">
-                <th scope="row">Total Links</th>
-                <td>{{ num_user_links }}</td>
-            </tr>
-            <tr class="table-info">
-                <th scope="row">Total Topics</th>
-                <td>{{ num_user_topics }}</td>
-            </tr>
-            <tr class="table-info">
-                <th scope="row">Total Tags</th>
-                <td>{{ num_user_tags }}</td>
-            </tr>
-            <tr class="table-info">
-                <th scope="row">Links Read</th>
-                <td>{{ num_links_read }}</td>
-            </tr>
-            <tr class="table-info">
-                <th scope="row">Links Marked</th>
-                <td>{{ num_links_marked }}</td>
-            </tr>
-            <tr class="table-info">
-                <th scope="row">Topics with most number of Links (top-3)</th>
-                <td>{{ topic_with_most_links|join:", " }}</td>
-            </tr>
-            <tr class="table-info">
-                <th scope="row">Topics with most clicked/opened Links (top-3)</th>
-                <td>{{ topic_with_max_read_count_link|join:", " }}</td>
-            </tr>
-            <tr class="table-info">
-                <th scope="row">Tags with most number of Links (top-3)</th>
-                <td>{{ tag_with_most_links|join:", " }}</td>
+                <th scope="row">{{ k }}</th>
+                <td>{{ v }}</td>
             </tr>
             </tbody>
+            {% endfor %}
         </table>
     </div>
 {% endblock %}
