--- a/store/templates/store/topic_list.html
+++ b/store/templates/store/topic_list.html
@@ -5,6 +5,7 @@
     <tr>
         <th scope="col"><h4>#</h4></th>
         <th scope="col"><h4>Topic</h4></th>
+        <th scope="col"><h4>Total Links</h4></th>
         <th scope="col"><h4>Updated</h4></th>
         <th scope="col"><h4>Created</h4></th>
     </tr>
@@ -13,10 +14,11 @@
     {% for topic in topic_list %}
         <tr>
             <th scope="row">{{ forloop.counter }}</th>
-            <td>{{ topic.name | lower}}
+            <td>{{ topic.name | lower }}
                 <a href="{% url 'store:topic-update' topic.pk %}" target="_blank">
                     <img src="{% static 'store/img/edit_icon.svg' %}" alt="edit-link"/>
                 </a></td>
+            <td>{{ topic.topic_links.all|length }}</td>
             <td>{{ topic.updated_on|date:"d-m-y" }}</td>
             <td>{{ topic.created_on|date:"d-m-y" }}</td>
         </tr>
