enhancement: new landing bg, abstract landing login bg, viewport max width and height

--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -1,8 +1,8 @@
-{% extends 'store/base.html' %}
+{% extends 'store/base_landing_login.html' %}
 {% load static %}
-{% block content %}
 
-    <img src="{% static 'store/img/landing_bg.jpg' %}" class="img-fluid" alt="landing-page-bg">
+
+{% block content_landing_login %}
     <div class="container-fluid
     position-absolute top-50 start-50 translate-middle"
     >
@@ -13,5 +13,6 @@
             <a href="{% url 'users:login' %}" class="btn btn-primary btn-sm">Re-Login</a>
         </div>
     </div>
+{% endblock %}
 
-{% endblock content %}
+
