--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -1,8 +1,8 @@
-{% extends 'store/base.html' %}
+{% extends 'store/base_landing_login.html' %}
 {% load static %}
-{% block content %}
 
-    <img src="{% static 'store/img/landing_bg.jpg' %}" class="img-fluid" alt="landing-page-bg">
+
+{% block content_landing_login %}
     <div class="container-fluid
 position-absolute top-50 start-50 translate-middle"
     >
@@ -23,4 +23,4 @@ position-absolute top-50 start-50 translate-middle"
             </form>
         </div>
     </div>
-{% endblock content %}
+{% endblock %}
