--- a/store/templates/store/landing.html
+++ b/store/templates/store/landing.html
@@ -1,8 +1,8 @@
-{% extends 'store/base.html' %}
+{% extends 'store/base_landing_login.html' %}
 {% load static %}
-{% block content %}
 
-    <img src="{% static 'store/img/landing_bg.jpg' %}" class="img-fluid" alt="landing-page-bg">
+
+{% block content_landing_login %}
     <div class="container-fluid
     position-absolute top-50 start-50 translate-middle"
     >
@@ -10,12 +10,13 @@
         p-3 mb-2 bg-light text-dark
         shadow-lg p-3 mb-5 bg-body-tertiary rounded">
             <h1>Welcome to <small class="text-primary-emphasis"><em>Link Store</em></small></h1>
-            <p class="lead"><em>A central place for storing and managing links to your most interesting and important
+            <p class="lead"><em>A central place for storing and managing links to your most interesting and
+                important
                 webpages</em></p>
 
-            <a href="{% url 'users:login' %}" class="btn btn-primary btn-lg">Login</a>
-            <a href="{% url 'users:register' %}" class="btn btn-primary btn-lg">Register</a>
+            <a href="{% url 'users:login' %}" class="btn btn-primary btn">Login</a>
+            <a href="{% url 'users:register' %}" class="btn btn-primary btn">Register</a>
         </div>
     </div>
+{% endblock %}
 
-{% endblock content %}
