--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -7,9 +7,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Link Store</title>
+    <link rel="icon" href="{% static 'store/img/favicon_img.jpg' %}">
     {% bootstrap_css %}
     {% bootstrap_javascript %}
 </head>
-        {% block content %}
-        {% endblock %}
+{% block content %}
+{% endblock %}
 </html>
