--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -22,6 +22,7 @@ position-absolute top-50 start-50 translate-middle"
                         <input type="text" name="username" class="form-control" id="for_username"
                                placeholder="Username">
                     </div>
+
                     <div>
                         <label for="for_password" class="form-label mt-4">Password</label>
                         <input type="password" name="password" class="form-control" id="for_password"
@@ -29,10 +30,10 @@ position-absolute top-50 start-50 translate-middle"
                                autocomplete="off">
                     </div>
 
-                    <div class="p-2 g-col-6">
+                    <div class="p-2 g-col-6 d-flex justify-content-between">
                         <button name="submit" class="btn btn-primary btn-sm">Log in</button>
                         <input type="hidden" name="next" value="{% url 'store:links' %}"/>
-
+                        <p><a href="{% url 'users:password_change' %}">Reset Password</a></p>
                     </div>
                 </div>
             </form>
