being different actions - reset changed to changed in template for pwd change

--- a/users/templates/registration/password_change_done.html
+++ b/users/templates/registration/password_change_done.html
@@ -10,7 +10,7 @@ position-absolute top-50 start-50 translate-middle"
         p-3 mb-2 bg-light text-dark
         shadow-lg p-3 mb-5 bg-body-tertiary rounded">
 
-            <p class="text-success"><strong>Password successfully changed </strong></p>
+            <p class="text-success"><strong>Password changed successfully</strong></p>
             <a href="{% url 'users:login' %}" class="btn btn-primary btn-sm">Click here to Login</a>
             
         </div>
