--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -48,7 +48,7 @@ position-absolute top-50 start-50 translate-middle"
                     </fieldset>
 
                     <div class="p-2 g-col-6">
-                        <input class="btn btn-primary btn-sm" type="submit" name="next" value="Reset Password"/>
+                        <input class="btn btn-primary btn-sm" type="submit" name="next" value="Change Password"/>
                     </div>
 
                 </div>
