change pwd to reset

--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -33,7 +33,7 @@ position-absolute top-50 start-50 translate-middle"
                     <div class="p-2 g-col-6 d-flex justify-content-between">
                         <button name="submit" class="btn btn-primary btn-sm p-2">Log in</button>
                         <input type="hidden" name="next" value="{% url 'store:links' %}"/>
-                        <p><a href="{% url 'users:password_change' %}">Change Password</a></p>
+                        <p><a href="{% url 'users:password_reset' %}">Reset Password</a></p>
                     </div>
                 </div>
             </form>
