console local smtp to settings, use default email widget

--- a/users/templates/registration/password_reset_form.html
+++ b/users/templates/registration/password_reset_form.html
@@ -20,9 +20,9 @@ position-absolute top-50 start-50 translate-middle"
                     {{ form.email.errors }}
                     <div class="p-3 d-flex flex-column align-items-start">
                         <label class="col-form-label" for="id_email">Email address:</label>
-                        <input type="email" class="form-control form-control-sm" id="id_email"
-                               placeholder="Email">
-                        {#                            {{ form.email }}#}
+                        {#                        <input type="email" class="form-control form-control-sm" id="id_email"#}
+                        {#                               placeholder="Email">#}
+                        {{ form.email }}
                     </div>
 
                     <div class="p-3 d-flex justify-content-start">
