starting with link list view, added datatables stuff to work on

--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -4,6 +4,8 @@
     {% csrf_token %}
     <script src="{% static 'store/js/utilFunctions.js' %}"></script>
     <link rel="stylesheet" href="{% static 'store/css/style.css' %}">
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.5/css/dataTables.dataTables.css"/>
+    <script src="https://cdn.datatables.net/2.1.5/js/dataTables.js"></script>
     <thead class="h6">
     <tr>
         <th scope="col"><h4>#</h4></th>
