--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Link Store</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <link rel="icon" href="{% static 'store/img/favicon_img.jpg' %}">
     {% bootstrap_css %}
     {% bootstrap_javascript %}
