--- a/store/templates/store/base_list.html
+++ b/store/templates/store/base_list.html
@@ -2,11 +2,15 @@
 {% load static %}
 
 {% block view_content %}
-    <div class="container-fluid">
-        <table class="table table-hover table-borderless">
-            {% block content_list %}
-            {% endblock %}
-        </table>
-    </div>
-{% endblock %}
 
+    <script src="https://cdn.datatables.net/2.1.5/js/dataTables.js"></script>
+    <script src="{% static 'store/js/utilFunctions.js' %}"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.5/js/dataTables.bootstrap5.js"/>
+    <link rel="stylesheet" href="{% static 'store/css/style.css' %}">
+
+    <div class="container-fluid">
+        {% block content_list %}
+        {% endblock %}
+    </div>
+    
+{% endblock %}
