--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -1,95 +1,64 @@
 {% extends 'store/base_list.html' %}
 {% load static %}
-{% block content_list %}
-    {% csrf_token %}
-    <script src="{% static 'store/js/utilFunctions.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'store/css/style.css' %}">
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.5/css/dataTables.dataTables.css"/>
-    <script src="https://cdn.datatables.net/2.1.5/js/dataTables.js"></script>
-    <thead class="h6">
-    <tr>
-        <th scope="col"><h4>#</h4></th>
-        <th scope="col"><h4>Link</h4></th>
-        <th scope="col"><h4>Topic</h4></th>
-        <th scope="col"><h4>Updated</h4></th>
-        <th scope="col"><h4>Read#</h4></th>
-        <th scope="col"><h4>Saved</h4></th>
-        <th scope="col"><h4>Type</h4></th>
-        <th scope="col"><h4>Read?</h4></th>
-        <th scope="col"><h4>Marked?</h4></th>
-    </tr>
-    <tr class="sort-filter">
-        <th scope="col"></th>
-        <th scope="col"></th>
-        <th>
-            <label for="topic-filter"></label>
-            <select name="topic-filter" id="topic-filter">
-                <option value="">-----</option>
-            </select>
-        </th>
-        <th scope="col">
-            <img src="{% static 'store/img/sort-ascending.svg' %}" alt="sort-asc"/>
-            <img src="{% static 'store/img/sort-descending.svg' %}" alt="sort-desc"/>
-        </th>
-        <th scope="col">
-            <img src="{% static 'store/img/sort-ascending.svg' %}" alt="sort-asc"/>
-            <img src="{% static 'store/img/sort-descending.svg' %}" alt="sort-desc"/></th>
-        <th scope="col">
-            <img src="{% static 'store/img/sort-ascending.svg' %}" alt="sort-asc"/>
-            <img src="{% static 'store/img/sort-descending.svg' %}" alt="sort-desc"/></th>
-        <th scope="col">
-            <label for="type-filter"></label>
-            <select name="type-filter" id="type-filter">
-                <option value="">-----</option>
-            </select>
-        </th>
-        <th scope="col">
-            <img src="{% static 'store/img/sort-ascending.svg' %}" alt="sort-asc"/>
-            <img src="{% static 'store/img/sort-descending.svg' %}" alt="sort-desc"/></th>
-        <th scope="col">
-            <img src="{% static 'store/img/sort-ascending.svg' %}" alt="sort-asc"/>
-            <img src="{% static 'store/img/sort-descending.svg' %}" alt="sort-desc"/></th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for link in link_list %}
-        <tr>
-            <td><strong>{{ forloop.counter }}</strong></td>
-            <td>
-                <a href="{{ link.url }}" target="_blank" onclick="readCountAndStatusUpdate({{ link.pk }})">
-                    {{ link.title | lower | slice:":30" }}
-                </a>
-                <a href="{% url 'store:link-update' link.pk %}" target="_blank">
-                    <img src="{% static 'store/img/edit_icon.svg' %}" alt="edit-link"/>
-                </a>
 
-            </td>
-            <td>{{ link.topic | lower }}</td>
-            <td>{{ link.updated_on|date:"d-m-y" }}</td>
-            <td>{{ link.read_count }}</td>
-            <td>{{ link.saved_on|date:"d-m-y" }}</td>
-            <td>{{ link.type }}</td>
-            <td>
-                <input type="checkbox"
-                       id="is_read_{{ link.pk }}"
-                       name="read_{{ link.pk }}"
-                       value="{{ link.pk }}"
-                        {% if link.is_read %} checked="checked" {% endif %}
-                       onchange="updateCheckboxBackend('read_{{ link.pk }}')"
-                />
-                <label for="is_read_{{ link.pk }}"></label>
-            </td>
-            <td>
-                <input type="checkbox"
-                       id="is_marked_{{ link.pk }}"
-                       name="marked_{{ link.pk }}"
-                       value="{{ link.pk }}"
-                        {% if link.is_marked %} checked="checked" {% endif %}
-                       onchange="updateCheckboxBackend('marked_{{ link.pk }}')"
-                />
-                <label for="is_marked_{{ link.pk }}"></label>
-            </td>
+{% block content_list %}
+    <table class="table table-hover table-borderless" id="listTable" style="width:100%">
+        {% csrf_token %}
+        <thead>
+        <tr>
+            <th scope="col"><h4>#</h4></th>
+            <th scope="col"><h4>Link</h4></th>
+            <th scope="col"><h4>Topic</h4></th>
+            <th scope="col"><h4>Updated</h4></th>
+            <th scope="col"><h4>Read#</h4></th>
+            <th scope="col"><h4>Saved</h4></th>
+            <th scope="col"><h4>Type</h4></th>
+            <th scope="col"><h4>Read?</h4></th>
+            <th scope="col"><h4>Marked?</h4></th>
         </tr>
-    {% endfor %}
-    </tbody>
+        </thead>
+        <tbody>
+        {% for link in link_list %}
+            <tr>
+                <td><strong>{{ forloop.counter }}</strong></td>
+                <td>
+                    <a href="{{ link.url }}" target="_blank" onclick="readCountAndStatusUpdate({{ link.pk }})">
+                        {{ link.title | lower | slice:":30" }}
+                    </a>
+                    <a href="{% url 'store:link-update' link.pk %}" target="_blank">
+                        <img src="{% static 'store/img/edit_icon.svg' %}" alt="edit-link"/>
+                    </a>
+
+                </td>
+                <td>{{ link.topic | lower }}</td>
+                <td>{{ link.updated_on|date:"d-m-y" }}</td>
+                <td>{{ link.read_count }}</td>
+                <td>{{ link.saved_on|date:"d-m-y" }}</td>
+                <td>{{ link.type }}</td>
+                <td>
+                    <input type="checkbox"
+                           id="is_read_{{ link.pk }}"
+                           name="read_{{ link.pk }}"
+                           value="{{ link.pk }}"
+                            {% if link.is_read %} checked="checked" {% endif %}
+                           onchange="updateCheckboxBackend('read_{{ link.pk }}')"
+                    />
+                    <label for="is_read_{{ link.pk }}"></label>
+                </td>
+                <td>
+                    <input type="checkbox"
+                           id="is_marked_{{ link.pk }}"
+                           name="marked_{{ link.pk }}"
+                           value="{{ link.pk }}"
+                            {% if link.is_marked %} checked="checked" {% endif %}
+                           onchange="updateCheckboxBackend('marked_{{ link.pk }}')"
+                    />
+                    <label for="is_marked_{{ link.pk }}"></label>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <script src="{% static 'store/js/list_view_datatables_init.js' %}"></script>
 {% endblock %}
