--- a/store/templates/store/base_list.html
+++ b/store/templates/store/base_list.html
@@ -12,5 +12,5 @@
         {% block content_list %}
         {% endblock %}
     </div>
-    
+    <script src="{% static 'store/js/list_view_datatables_init.js' %}"></script>
 {% endblock %}
