bootstrap 5 css for datatables

--- a/store/templates/store/base_list.html
+++ b/store/templates/store/base_list.html
@@ -5,7 +5,7 @@
 
     <script src="https://cdn.datatables.net/2.1.5/js/dataTables.js"></script>
     <script src="{% static 'store/js/utilFunctions.js' %}"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.5/js/dataTables.bootstrap5.js"/>
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.5/css/dataTables.bootstrap5.css"/>
     <link rel="stylesheet" href="{% static 'store/css/style.css' %}">
 
     <div class="container-fluid">
