--- a/store/static/store/css/style.css
+++ b/store/static/store/css/style.css
@@ -1,4 +1,12 @@
-.sort-filter th {
-    padding-top: 1px;
+.dt-length {
+    padding-top: 20px;
+    padding-left: 20px;
 }
 
+.dt-search {
+    padding-right: 20px;
+}
+
+.dt-info {
+    padding-top: 20px;
+}
