--- a/store/templates/store/base_list.html
+++ b/store/templates/store/base_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block view_content %}
-
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.5.0/build/global/luxon.min.js"></script>
     <script src="https://cdn.datatables.net/2.1.5/js/dataTables.js"></script>
     <script src="{% static 'store/js/utilFunctions.js' %}"></script>
     <link rel="stylesheet" href="https://cdn.datatables.net/2.1.5/css/dataTables.bootstrap5.css"/>
