h6 class to thead

--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -6,7 +6,7 @@
            id="listTable" 
            style="width:100%">
         {% csrf_token %}
-        <thead>
+        <thead class="h6">
         <tr>
             <th scope="col"><h4>#</h4></th>
             <th scope="col"><h4>Link</h4></th>
